vbnc/vbnc/vbnc/tests/Errors/30311-16.vb
Class T
    Const M_Date As Date = CSByte(2)
End Class